# polymind

./: .env.example  .gitignore  CHANGES.md  GUIDE.md  LICENSE  README.md  pyproject.toml  run_tests.py
config/: mcp_settings.json
docs/: conf.py  index.rst  src.agents.rst  src.domains.cv.rst  src.mcp.rst  src.memory.rst  src.rag.rst  src.rst  view_docs.sh
docs/_build/html/: .buildinfo  architecture.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  src.agents.html  src.code.html  src.core.html  src.domains.cv.html  src.domains.html  src.domains.nlp.html  src.domains.tabular.html  src.html  src.mcp.html  src.memory.html  src.rag.html  user_guide.html
docs/_build/html/.doctrees/: architecture.doctree  environment.pickle  index.doctree  modules.doctree  src.agents.doctree  src.code.doctree  src.core.doctree  src.doctree  src.domains.cv.doctree  src.domains.doctree  src.domains.nlp.doctree  src.domains.tabular.doctree  src.mcp.doctree  src.memory.doctree  src.rag.doctree  user_guide.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/src/core/: config.html
docs/_build/html/_sources/: architecture.rst.txt  src.code.rst.txt  src.core.rst.txt  src.domains.nlp.rst.txt  src.domains.rst.txt  src.domains.tabular.rst.txt  user_guide.rst.txt
examples/: mcp_example.py  simple_example.py
src/: __init__.py  main.py
src/agents/: base_agent.py  data_engineer.py  ml_architect.py  ml_engineer.py  product_manager.py  qa_engineer.py  sw_architect.py  sw_engineer.py  team_leader.py
src/core/: config.py  coordinator.py  task_router.py
src/domains/cv/: models.py
src/mcp/: server.py
src/memory/: agent_memory.py  long_term.py  memory_manager.py  short_term.py
src/rag/: retriever.py
tests/: __init__.py  test_basic.py
(+3 files in other folders)
